Fixed vertical alignment of volume buttons

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -27,10 +27,6 @@ ul {
   padding: 0;
 }
 
-li {
-  padding: 10px;
-}
-
 .App {
   display: flex;
   flex-direction: column;
