--- a/src/components/VolumeAdjuster/VolumeAdjuster.scss
+++ b/src/components/VolumeAdjuster/VolumeAdjuster.scss
@@ -3,6 +3,7 @@
 .VolumeAdjuster {
   display: flex;
   justify-content: flex-end;
+  width:100%;
 }
 
 .list {
